[MAP] Fix height styling, it was taking too much space when SPAW is showing
- It is also working on older Safari Mobile browser

--- a/client/layouts/TripPlanner/TripPlanner.css
+++ b/client/layouts/TripPlanner/TripPlanner.css
@@ -1,5 +1,6 @@
 .Map {
-    height: 100%;
+    display: flex;
+    flex: 1;
 }
 
 .Welcome {
