--- a/client/layouts/pages/pages.css
+++ b/client/layouts/pages/pages.css
@@ -45,6 +45,7 @@
     & > main {
         position: relative;
         flex: 1;
+        display: flex;
     }
 }
 
